# noita_spell_sorter

./: .gitignore  .luarc.json  .scratch.lua  README.md  init.lua  mod.xml  mod_id.txt  spellSorting.lua  util.lua
api_documentation/: convertLuaApi.py  main.py  noita_lua_ls_documentation.lua  pyproject.toml
api_documentation/conversion/: convertLuaApi.py  parser.py
api_documentation/conversion/tree-sitter/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
api_documentation/conversion/tree-sitter/bindings/c/: tree-sitter-noita_lua_doc.pc.in
api_documentation/conversion/tree-sitter/bindings/go/: binding.go  binding_test.go
api_documentation/conversion/tree-sitter/bindings/node/: binding.cc
api_documentation/conversion/tree-sitter/bindings/python/tests/: test_binding.py
api_documentation/conversion/tree-sitter/bindings/python/tree_sitter_noita_lua_doc/: __init__.py  binding.c
api_documentation/conversion/tree-sitter/bindings/rust/: build.rs  lib.rs
api_documentation/conversion/tree-sitter/bindings/swift/TreeSitterNoitaLuaDoc/: noita_lua_doc.h
api_documentation/conversion/tree-sitter/bindings/swift/TreeSitterNoitaLuaDocTests/: TreeSitterNoitaLuaDocTests.swift
api_documentation/conversion/tree-sitter/src/: grammar.json  parser.c
api_documentation/raw/: docs.noitadoc  docs_test.noitadoc  noitadoc
